prod/frontend-prod-ingest-iiif/templates/ext-svcs.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: external-ingest-fester
  namespace: frontend-prod-ingest-iiif
spec:
  type: ExternalName
  externalName: prod-ingest-fester.prod-ingest-fester.svc.cluster.local
