prod/frontend-prod-ingest-iiif/templates/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingest-iiif-ingress
  namespace: frontend-prod-ingest-iiif
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: "sectigo-acme-clusterissuer"
spec:
  rules:
  - host: ingest.iiif.library.ucla.edu
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: external-ingest-fester
            port:
              number: 80
  tls:
    - hosts:
      - ingest-iiif.library.ucla.edu
      secretName: frontend-prod-ingest-iiif-tls
